added to footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -176,3 +176,8 @@
 
 </body>
 </html>
+
+<p style="font-size: 0.85rem; color: #000000; margin-top: 0.5rem;">
+  Images and product information © respective owners. Recommendations are algorithmic and for informational use only.
+</p>
+
